feat(team): improve invitation management UX
